--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+configparser==3.5.0
 dj-database-url==0.4.0
 Django==1.9.2
 djangorestframework==3.3.3
 gunicorn==19.4.5
+mysql==0.0.1
+mysql-connector-python-rf==2.1.3
 psycopg2==2.6.1
 whitenoise==2.0.6
+xmltodict==0.10.2
